generate allocations lines.